# fedora-container-release

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/bodhi/: mod.rs
src/koji/: mod.rs
src/prerelease/: bodhi.rs  koji.rs  mod.rs
templates/: Containerfile
