[package]
name = "fedora-container-release"
version = "0.1.0"
authors = ["Clement Verna <cverna@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
xmlrpc = "0.14.0"
